Closed Bug 1655651 Opened 4 years ago Closed 4 years ago

`EditorDOMRangeBase::Contains()` does not compare end point as expected

Categories

(Core :: DOM: Editor, defect, P3)

80 Branch
defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox79 --- unaffected
firefox80 --- wontfix
firefox81 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This is a bug of new API. Fortunately, this API hasn't be used by editor code yet so that we don't need to fix this in 80.

Root Cause: --- → Coding: Logical Error
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/6642cc57b2e7
Fix end point comparison in `EditorDOMRangeBase::Contains()` r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: