Bug 1655651 - Fix end point comparison in `EditorDOMRangeBase::Contains()` r=m_kato

Fortunately, nobody uses this API yet.

Differential Revision: https://phabricator.services.mozilla.com/D85108